--- a/scss/_food.scss
+++ b/scss/_food.scss
@@ -35,7 +35,6 @@
 }
 
 .food-content {
-    border-top: 1px solid #d30000;
     width: 80%;
     padding: 60px;
     margin: 0 auto;
