--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -91,7 +91,8 @@ header {
 
                 a {
                     display: block;
-                    padding: 15px 15px;
+                    padding: 15px 0;
+                    margin:0 15px;
                     text-transform: uppercase;
                     color: $white;
                     text-decoration: none;
@@ -157,7 +158,7 @@ header {
                 li {
                     a{
                         text-align: center;
-                        font-size: 20pt;
+                        font-size: 18pt;
                     }
                 }
             }
